package com.techreturners.cats;

public interface Cat {

    String eat();
    void run();
    void goToSleep();
    void wakeUp();
    boolean getIsAsleep();
    int getAverageHeight();
    Setting getSetting();
}
