package com.techreturners.cats;

public enum Setting {
    DOMESTIC,
    WILD
}
